fix tooltip wrapping

--- a/sass/components/view.scss
+++ b/sass/components/view.scss
@@ -212,7 +212,7 @@
                     }
                 }
                 .sc-tooltip__inner {
-                    width: 304px;
+                    max-width: 304px;
                     height: auto;
                     white-space: break-spaces;
                     text-align: center;
